# shared-localization

./: README.md  pyproject.toml
shared_localization/: localizable_strings.py
tests/: test_localizable_strings.py
